jvm fix